--- a/packages/jezvejs/src/Components/Button/style.scss
+++ b/packages/jezvejs/src/Components/Button/style.scss
@@ -29,6 +29,11 @@
   --btn-hover-icon-color: var(--btn-icon-color);
   --btn-hover-background: none;
 
+  /* Active state */
+  --btn-active-title-color: var(--btn-hover-title-color);
+  --btn-active-icon-color: var(--btn-hover-icon-color);
+  --btn-active-background: var(--btn-hover-background);
+
   display: inline-flex;
   flex-flow: row nowrap;
   align-items: center;
@@ -75,6 +80,15 @@
   color: var(--btn-title-color);
 }
 
+.btn:active {
+  color: var(--btn-active-title-color);
+  background: var(--btn-active-background);
+
+  .btn__icon {
+    fill: var(--btn-active-icon-color);
+  }
+}
+
 .btn[disabled] {
   color: var(--btn-disabled-title-color);
   background: var(--btn-disabled-background);
@@ -98,6 +112,15 @@
 
     .btn__content {
       color: var(--btn-hover-title-color);
+    }
+  }
+
+  .btn:active:hover {
+    color: var(--btn-active-title-color);
+    background: var(--btn-active-background);
+
+    .btn__icon {
+      fill: var(--btn-active-icon-color);
     }
   }
 }
